<resources>
    <string name="app_name">RegexGolf</string>

    <string name="title_activity_play_menu">PlayMenuActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="campaign">Campaign</string>
    <string name="generated">Generated</string>
    <string name="challenge">Challenge</string>
    <string name="duel">Duel</string>
    <string name="windings">Windings</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="about_us">About Us</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="next_level">NEXT LEVEL</string>
    <string name="regex_goes_here">Regex goes here</string>
    <string name="whats_a_regex">What is a regular expression\nA regular expression (or regex for short) is a sequence of characters that define a search pattern.</string>
    <string name="whats_regex_golf">What is Regex Golf\nRegex golf is about finding a pattern that matches the words in the left column but doesn\'t match the ones in the right.\nThe goal is to use the least amount of characters to create such a regex, much like you try to hit the ball into the hole in golf using the least amount of strokes.</string>
    <string name="help_single_character">Single character\nSimply writing a character or a string of characters means a word contains what you wrote.\nUsing brackets you can define alternatives.\n<font color='#111111'><i>gr[ae]y</i></font> matches both <font color='#111111'>gray</font> and <font color='#111111'>grey</font>.\nDashes help you shorten large groups of alternatives.\n<font color='#111111'><i>dun[e-k]</i></font> matches <font color='#111111'>dune</font>, <font color='#111111'>dung</font>, and <font color='#111111'>dunk</font>.\nUse the dot character the define wildcards that match any one character.\n<font color='#111111'>t.n</font> matches <font color='#111111'>tan</font>, <font color='#111111'>tin</font>, <font color='#111111'>ton</font>, etc.</string>
    <!--<string name="help_basics">Dashes help you shorten large groups of alternatives.\nFor example, <font color='#111111'>dun[e-k]</font> matches <font color='#111111'>dune</font>, <font color='#111111'>dung</font>, and <font color='#111111'>dunk</font>.\n\nFor example, <font color='#111111'><b>dun[e-k]</b></font> matches <font color='#111111'>dune</font>, <font color='#111111'>dung</font>, and <font color='#111111'>dunk</font>.\n\nFor example, <font color='#111111'><b>dun[e-k]</b></font> matches <font color='#111111'><i>dune</i></font>, <font color='#111111'><i>dung</i></font>, and <font color='#111111'><i>dunk</i></font>.\n\nFor example, <font color='#111111'><i>dun[e-k]</i></font> matches <font color='#111111'>dune</font>, <font color='#111111'>dung</font>, and <font color='#111111'>dunk</font>.</string>-->

    <string name="help_multiple_characters">Multiple characters\nQuantifiers come in three kinds, but they are all associated with the element they follow.\n <font color='#111111'><i>*</i></font> matches the preceding element zero or more times.\nFor example, <font color='#111111'><i>ab*c</i></font> matches <font color='#111111'>ac</font>, <font color='#111111'>abc</font>, <font color='#111111'>abbbc</font>, etc.\n <font color='#111111'><i>+</i></font> is similar to <font color='#111111'><i>*</i></font> but it forces at least one match.\nSo <font color='#111111'><i>ab+c</i></font> wouldn\'t match <font color='#111111'>ac</font>, but it would match all the others from the previous example.</string>
    <string name="regex_handbook">Regex handbook</string>
    <string name="tap_to_expand">Double tap on any topic to expand it</string>
    <string name="donate">$ Donate $</string>
</resources>