<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/ForestGreen"
    tools:context="rotygames.regexgolf.HelpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regex_handbook"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/NavajoWhite"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_expand"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/NavajoWhite"
        android:textStyle="bold"
        android:paddingBottom="12dp"/>

    <TextView
        style="@style/HelpTextView"
        android:text="@string/whats_a_regex"
        />
    <TextView
        style="@style/HelpTextView"
        android:text="@string/whats_regex_golf"
        />
    <TextView
        style="@style/HelpTextView"
        android:text="@string/help_basics"/>

</LinearLayout>